# JUCE

examples/GainPlugin/: CMakeLists.txt  GainPlugin.jucer  plugin.html
examples/GainPlugin/Source/: GainPluginDemo.h  JuceHeader.h  Main.cpp
modules/juce_audio_plugin_client/: juce_audio_plugin_client.h  juce_audio_plugin_client_Standalone.mm  juce_audio_plugin_client_VST3_utils.mm  juce_audio_plugin_client_utils.cpp
modules/juce_audio_plugin_client/AU/: juce_AU_Wrapper.mm  juce_AUv3_Wrapper.mm
modules/juce_audio_plugin_client/Standalone/: juce_StandaloneAudio.h  juce_StandaloneFilterWindow.h  juce_mac_StandaloneFilterApp.cpp  juce_win_StandaloneFilterApp.cpp
modules/juce_audio_plugin_client/VST/: juce_VST_Wrapper.cpp  juce_VST_Wrapper.mm
modules/juce_audio_plugin_client/VST3/: juce_VST3_MacWebViewEditor.cpp  juce_VST3_Wrapper.cpp  juce_VST3_Wrapper.mm
modules/juce_audio_plugin_client/utility/: juce_LinuxMessageThread.h
modules/juce_audio_processors/: juce_audio_processors.cpp  juce_audio_processors.h
modules/juce_audio_processors/format_types/: juce_VST3Common.h  juce_VST3Headers.h
modules/juce_audio_processors/native/: juce_NativeWebViewImpl.h  juce_linux_NativeWebViewImpl.cpp  juce_mac_NativeWebViewImpl.cpp  juce_win_NativeWebViewImpl.cpp
modules/juce_audio_processors/processors/: juce_AudioProcessor.cpp  juce_AudioProcessor.h  juce_AudioProcessorGraph.cpp  juce_AudioProcessorGraph.h
modules/juce_audio_processors/scanning/: juce_KnownPluginList.cpp  juce_KnownPluginList.h
modules/juce_audio_processors/utilities/: juce_AudioProcessorValueTreeState.cpp  juce_AudioProcessorValueTreeState.h  juce_NativeWebView.cpp  juce_NativeWebView.h  juce_WebViewConfiguration.h
modules/juce_audio_utils/: juce_audio_utils.cpp  juce_audio_utils.h
modules/juce_core/native/: juce_mac_ObjCHelpers.h
modules/juce_core/network/: juce_URL.cpp  juce_URL.h
modules/juce_core/system/: juce_StandardHeader.h
modules/juce_gui_extra/: juce_gui_extra.cpp  juce_gui_extra.h
(+5 files in other folders)
